<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="scan_shortcut_short_label">扫一扫</string>
    <string name="scan_shortcut_long_label">扫一扫的全称</string>

    <string name="query_shortcut_short_label">搜索</string>
    <string name="query_shortcut_long_label">搜索的全称</string>

    <string name="payment_shortcut_short_label">收付款</string>
    <string name="payment_shortcut_long_label">就是在收钱以及付款的场景下使用的呀</string>

    <string name="settings_shortcut_short_label">设置页面</string>
    <string name="settings_shortcut_long_label">设置的全称</string>


    <string name="simple_use">最普遍使用</string>
    <string name="simple_des">就是简单的使用，个人建议这样的简单分割线还是用布局来实现，因为UI随时会变，以及UI上要求对齐之类的使用起来也方便</string>
    <string name="muti_use">多布局使用</string>
    <string name="muti_des">这个页面的展示就是多布局的，个人建议ViewHolder单独拉出来，adapter里代码简洁，且提高代码复用。如 ：2个列表页面，有一条Item是相同的，如果拉出来直接用就好了。写内部类的话，要写2遍</string>
    <string name="addhead_use">添加头部/添加底部</string>
    <string name="addhead_des">根据心情添加你要的头部和底部</string>
    <string name="grid_use">网格布局/添加头底部</string>
    <string name="grid_des">网格布局的添加方式稍稍有所不同！</string>
    <string name="pull_use">瀑布流</string>
    <string name="pull_des">recyclerView实现瀑布流</string>
    <string name="animation_use">item带有动画效果</string>
    <string name="animation_des">item加载带有动画效果，默认每个item只加载一次。意思只有新item才会触发</string>
    <string name="shadowclick_use">点击item带圆圈扩散</string>
    <string name="shadowclick_des">在点击item条目时,带点击点扩散到全条目的效果</string>
    <string name="notify_use">recyclerView适配器各种刷新方法</string>
    <string name="notify_des">适配器刷新方法有 notifyItemChanged,notifyItemInserted,notifyItemRemoved等等</string>
    <string name="swip_use">item侧滑和拖拽</string>
    <string name="swip_des">item侧滑更多按钮以及item拖拽更换位置,利用recyclerView自带的ItemTouchHelper完成。其实底层是利用重写ItemDecoration分割线完成</string>
    <string name="smart_use">配合SmartRefreshLayout使用</string>
    <string name="smart_des">recyclerView配合第三控件SmartRefreshLayout使用,实战效果</string>
    <string name="swip_slide_use">item侧滑菜单(感谢牛人)</string>
    <string name="swip_slide_des">item条目侧滑的时候，显示侧滑菜单，比如有删除，编辑等</string>
    <string name="expand_use">recyclerView实现展开收起</string>
    <string name="expand_des">展开更多和收起的功能，或者用于列表分类，里面还有子分类。实质就是多布局，和用notifyItemInsert,主要是处理好数据更换这块</string>
    <string name="pager_use">recyclerView实现viewPager</string>
    <string name="pager_des">有时候需要viewPager的效果，但是又需要删除item和添加item,就派上用场了</string>
    <string name="span_use">网格recyclerView合并</string>
    <string name="span_des">通过网格布局添加头部的原理，可以实现不错的效果</string>
    <string name="recover_use">item重叠</string>
    <string name="recover_des">通过分割线的原理实现recycleView的item与item之间重叠效果</string>
    <string name="fold_use">折叠recyclerView(感谢启舰)</string>
    <string name="fold_des">一款折叠，酷炫的recyclerView,而且具有snap效果</string>
    <string name="sticky_use">StickyHeadListView(感谢大神)</string>
    <string name="sticky_des">这非recyclerView实现的，文中有注解。例如常见的通讯录，首字母上滑，B头部把A头部顶上去，且悬浮在顶部</string>
    <string name="coord_use">结合CoordinatorLayout使用</string>
    <string name="coord_des">结合CoordinatorLayout使用可以实现多种酷炫效果，这里介绍的是自己实现alpha的效果的。了解更多，可查关键字</string>
</resources>